# telegram-news-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.db  database.sql  docker-compose.yaml  pyproject.toml
telegram_news_bot/: __main__.py  config.py  db.py  fabric.py  parser.py  schemas.py  templates.py  utils.py
telegram_news_bot/habr/: parser.py
telegram_news_bot/parsers/: __init__.py  habr.py  medium.py
telegram_news_bot/services/: post.py
telegram_news_bot/telegram/: add_parsers.py  add_tags.py  bot.py  commands.py  post.py  settings.py  start.py  utils.py
telegram_news_bot/templates/: insert_label.j2  insert_link_labels_and_tags_with_post.j2  insert_post.j2  insert_tag.j2  medium_get_post_graphql.j2  post.j2  select_parsers.j2  select_post.j2  settings.j2  update_post.j2
telegram_news_bot/templates/database/: insert_post.j2  select_post.j2
telegram_news_bot/templates/telegram/: add_parsers.j2  add_tags_for_parser.j2  choose_parser_for_add_tags.j2  send_post.j2  settings.j2
tests/test_parsers/test_habr/: conftest.py  test_get_page.py  test_parse.py  test_parse_name.py  test_parse_raw_articles.py  test_parse_time_to_read.py  test_parse_url.py  test_transform_articles.py
