[tool.poetry]
name = "telegram-news-bot"
version = "0.1.0"
description = ""
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.4"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
fake-headers = "^1.0.2"
pytelegrambotapi = "^4.14.1"
loguru = "^0.7.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
select = ["F", "E", "W", "I", "N", "PL", "C", "B", "D"]

# Same as Black.
line-length = 89

[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]
asyncio_mode="auto"
